more swagger changes
